--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ DOMAIN=localhost
 HOST=http://localhost
 user=user
 pswd=password
-POSTGRES_DB=db
+POSTGRES_DB=pdb
 DB_HOST=postgres
+POSTGRES_PORT=5432
